samples/_failures_safe/1761288362_2c61c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc8d81ef.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fc8d81ef.c:176:20: error: expected ‘)’ at end of input
  176 |     if (token_count
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_fc8d81ef.c:176:5: error: expected declaration or statement at end of input
  176 |     if (token_count
      |     ^~
